<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="app_name">Andarivel</string>
    <string name="bienvenida">Bienvenido a Andarivel</string>
    <string name="etNombre">Nombre de Usuario</string>
    <string name="tvPass">Contraseña</string>
    <string name="foto_de_usuario">Foto de usuario</string>
    <string name="introduce_tu_nombre">Introduce tu nick</string>
    <string name="introduce_tu_pass">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="hello_blank_fragment">En construcción</string>
    <string name="crear_nuevo_usuario">Crear Nuevo Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="introduce_tus_apellidos">Apellidos</string>
    <string name="introduce_una_direcci_n">Dirección</string>
    <string name="email">Email</string>
    <string name="introduce_tu_email">Email</string>
    <string name="registrarse">Registrarse</string>
    <string name="atras">Atras</string>
    <string name="olvid_contrase_a">¿Olvidó contraseña?</string>
    <string name="entrar_en_app">Entrar en app</string>
    <string name="direcci_n">Dirección</string>
    <string name="aceptar">Aceptar</string>
    <string name="salir">Salir</string>
    <string-array name="ausencias">
        <item>Tipo de ausencia</item>
        <item>Enfermedad</item>
        <item>Asuntos propios</item>
        <item>Maternidad</item>
        <item>Paternidad</item>
        <item>Otro…</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_slideshow">Perfil</string>
    <string name="fichar">Fichar</string>
    <string name="salir_de_jornada">Salir de jornada</string>
    <string name="perfil">Perfil</string>
    <string name="tel_fono">Teléfono</string>
    <string name="calendario_de_tareas">Calendario de tareas</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="ausencia">Ausencia</string>
    <string name="solicitar_ausencia">Solicitar ausencia</string>
    <string name="solicitar">Solicitar</string>
    <string name="adjuntar">Adjunta un documento</string>
    <string name="descripci_n">Descripción</string>
    <string name="informes">Informes</string>
    <string name="volver">Volver</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="visualizar">Visualizar</string>
    <string name="descargar">Descargar</string>

    <string name="informes_fragment_name_text">Nombre: %s</string>
    <string name="ausencias_fragment_name_text"></string>
    <string name="solicitar_ausencia_tab_title">Solicitar Ausencia</string>
    <string name="conceder_ausencia_tab_title">Conceder Ausencia</string>
    <string name="notificar_ausencia_tab_title">Notificaciones</string>
    <string name="escribe_aqu">Escribe aquí una descripción</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="datos_usuario">Datos Usuario</string>
    <string name="correo">Correo:</string>
    <string name="telefono">Teléfono:</string>
    <string name="direccion">Dirección:</string>
    <string name="nombr_">Nombre:</string>
    <string name="ausencias_title_appbar">Ausencias</string>
    <string name="editar_perfil_title_appbar">Editar Perfil</string>
    <string name="informes_title_appbar">Informes</string>
    <string name="fecha">Fecha: </string>
    <string name="nombre_usuario">Nombre usuario: </string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="motivo_ausencia">Motivo Ausencia:</string>
    <string name="descripcion">Descripción:</string>
    <string name="denegar">Denegar</string>
    <string name="borrar">Borrar usuario</string>
    <string name="titulo_borrado">Confirmar Borrado</string>
    <string name="aleta_borrado">¿Estás seguro?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="solicitar_ausencia_creacion_exito_mensaje">Solicitud de Ausencia creada con éxito</string>
    <string name="ausencia_aceptada_exito_mensaje">La ausencia ha sido aceptada</string>
    <string name="toast_error_tipo_ausencia">Debes introducir un tipo de ausencia</string>
    <string name="toast_error_fecha_inicio_ausencia">Debes introducir una fecha de inicio</string>
    <string name="toast_error_fecha_fin_ausencia">Debes introducir una fecha de fin</string>
    <string name="no_peticiones_ausencia">NO HAY PETICIONES DE AUSENCIA</string>
    <string name="fallo">Fallo</string>
    <string name="ausencia_denegada">Ausencia Denegada</string>
    <string name="ausencia_pendiente">Tienes una ausencia pendiente de aprobar, tienes que esperar a que se resuelva para crear otra.</string>
    <string name="no_hay_fichajes">NO HAY FICHAJES</string>
    <string name="actualizado_correctamente">Se ha actualizado correctamente</string>
    <string name="telefono_no_valido">El teléfono no es válido</string>
    <string name="requerido">Requerido</string>
    <string name="error_subir_imagen">Error al subir la imagen</string>
    <string name="debes_completar_campos">Debes completar los campos</string>
    <string name="autenticar_fallo">Fallo al autenticar.</string>
    <string name="debes_introducir_email">Debes introducir un email</string>
    <string name="debes_introducir_email_valido">Debes introducir un email válido</string>
    <string name="debes_introducir_contrasena">Debes introducir una contraseña</string>
    <string name="contrasena_debil">La contraseña es demasiado débil</string>
    <string name="email_ya_registrado">Este email ya está registrado.</string>
    <string name="trabajadores">Trabajadores</string>
    <string name="estado_trabajadores_label">Estado Trabajadores</string>
    <string name="tablon_anuncios">Tablón Anuncios</string>
    <string name="imagen_lista_para_subir">Imagen lista para subir</string>
    <string name="Settings">Ajustes</string>
    <string name="txt_btn_excel_informes">Descargar excel</string>
    <string name="help_required">Requerido</string>
    <string name="titulo_cerrar_sesion">Cerrar sesión</string>
    <string name="exito_descarga_excel">El archivo se ha descargado correctamente.</string>
    <string name="title_trabajadores">Fichajes diarios</string>
    <string name="contacto_title">Contacto</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_location">Ubicación</string>
    <string name="main_show_map">Ver en el mapa</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="hint_title">Título para el anuncio</string>
    <string name="hint_description">Descripción del anuncio</string>
    <string name="content_description_imagen_anuncio">Adjuntar imagen en anuncio</string>
    <string name="no_hay_anuncios">No hay anuncios ahora mismo.</string>
    <string name="tema_oscuro">Tema oscuro</string>
    <string name="hint_link">Introduce un enlace</string>
    <string name="msg_error_download_file">Error al descargar el adjunto.</string>
    <string name="crear_evento">Crear evento</string>
    <string name="titulo_evento">Titulo del evento</string>
    <string name="descripcion_evento">Descripción del evento</string>
    <string name="fecha_requerida">Debes seleccionar una fecha.</string>
    <string name="enviar_a">Enviar a…</string>
</resources>