<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_de_fondo_principal"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:id="@+id/texoBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/foto_de_usuario"
        />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tvNombre"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/introduce_tu_nombre"
        android:inputType="textAutoCorrect"
        android:textColorHint="#01579B"
        android:textSize="20sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tvPass"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/introduce_tu_pass"
        android:inputType="textPassword"
        android:textColorHint="#006064"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:padding="20dp"
        android:backgroundTint="#000000"/>

    <Button
        android:id="@+id/btIrRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btOlvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/olvid_contrase_a"
        android:textAlignment="center"
        android:textColor="#1DE9B6"
        android:textSize="10sp"
        android:textStyle="bold" />

</LinearLayout>