<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_nested"
    app:startDestination="@id/home_dest">
    <fragment
        android:id="@+id/calendario_dest"
        android:name="com.pedroaguilar.andarivel.presentacion.ui.panelAdministrador.calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        tools:layout="@layout/fragment_calendario" />
    <fragment
        android:id="@+id/home_dest"
        android:name="com.pedroaguilar.andarivel.presentacion.ui.panelAdministrador.home.HomeFragment"
        android:label="@string/menu_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/perfil_dest"
        android:name="com.pedroaguilar.andarivel.presentacion.ui.panelAdministrador.perfil.PerfilFragment"
        android:label="@string/menu_slideshow"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_perfil_dest_to_editarPerfil_fragment"
            app:destination="@id/editarPerfil_dest" />
    </fragment>
    <activity
        android:id="@+id/panelAdministradorActivity"
        android:name="com.pedroaguilar.andarivel.presentacion.ui.panelAdministrador.PanelAdministradorActivity"
        android:label="PanelAdministradorActivity"
        tools:layout="@layout/activity_panel_administrador"/>
    <fragment
        android:id="@+id/ausencias_dest"
        android:name="com.pedroaguilar.andarivel.presentacion.ui.panelAdministrador.ausencias.AusenciasFragment"
        android:label="@string/ausencias_title_appbar"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        tools:layout="@layout/fragment_ausencias" />

    <fragment
        android:id="@+id/editarPerfil_dest"
        android:name="com.pedroaguilar.andarivel.presentacion.ui.panelAdministrador.perfil.EditarPerfilFragment"
        android:label="@string/editar_perfil_title_appbar"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        tools:layout="@layout/fragment_editar_perfil"></fragment>
    <fragment
        android:id="@+id/tablonAnuncios_dest"
        android:name="com.pedroaguilar.andarivel.presentacion.ui.panelAdministrador.tablonAnuncios.TablonAnunciosFragment"
        android:label="@string/tablon_anuncios"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        tools:layout="@layout/fragment_tablon_anuncios"></fragment>
</navigation>